--- a/Scribe/index.html
+++ b/Scribe/index.html
@@ -3,9 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Scribing</title>
 </head>
 <body>
-    
+    <h1>It Ends with Us</h1>
+        <img src="https://free-images.com/md/9cb8/sunset_sundown_da_nang.jpg" alt="Sunset" width="5%">
+    <br/>
+    <p><strong><Em><u>E</u></Em></strong>verything</p>
+    <br/>
+    <hr/>
+    <br/>
+    <p>4<sup>th</sup> CO<sub>2</sub></p>
+    <br/>
+    <hr/>
+
+    <input type="text" disabled="disabled"/>
+    <input type="text" disabled/>
+    <input type="text" />
+
+    <p>apstrophe&apos;s 
+        <ul>
+            <li>Hi</li>
+            <li>Hello</li>
+        </ul>
+
+        <ol>
+            <li>One</li>
+                <ul>
+                    <li>Something</li>
+                </ul>
+            <li>Two</li>
+        </ol>
+    </p>
+
+
 </body>
 </html>
