--- a/Scribe/semantic.html
+++ b/Scribe/semantic.html
@@ -4,7 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Brian Maina">
+    <meta name="description" content="">
     <title>Document</title>
+    <!--Applying css-->
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
+    <base href="www.base_url">
 </head>
 <body>
     <header>
@@ -25,6 +31,6 @@
 
 </body>
 <footer>
-    
+
 </footer>
 </html>
