--- a/Gallery/imagetest.html
+++ b/Gallery/imagetest.html
@@ -14,7 +14,7 @@
   <div class="popup" id="popup">
     <div class="popup-content">
       <span class="close" id="closePopup">&times;</span>
-      <img src="/Scribe/images/Screenshot 2024-11-12 at 10.57.49.png" alt="Popup Image">
+      <img src="/Media/Images/raw/colin-watts-g9aYfZb7_c8-unsplash.jpg" alt="Gallery Image 1">                     
     </div>
   </div>
 
